--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Hello React!</title>
+        <title>Labelizer</title>
     </head>
     <body>
-        <div id="example"></div>
+        <div id="root"></div>
 
         <!-- Dependencies -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.js"></script>
